Created Combined report functionality

--- a/recap.conf
+++ b/recap.conf
@@ -75,6 +75,10 @@ USEDF=no
 # Use printf "name\tactive\tnum_obj\tobj_size\thuh\n"; tail -n+2 /proc/slabinfo | awk 'size=$3*$4 {print $1"\t"$2"\t"$3"\t"$4"\t"size/1048576}' | sort -k5gr output. This will show you more information on the slab table. (default: no)
 USESLAB=no
 
+# Combined Report
+# Create a combined report of all of the enabled reports above
+USECOMBINED=no
+
 # MMon REPORT
 # Common Managed Monitoring commands such as the following:
 # tail /var/log/httpd/error_log
