Updated configuration file to reflect 'ps fauxww' change

--- a/recap.conf
+++ b/recap.conf
@@ -25,7 +25,7 @@ ROTATE=144
 ###########
 
 # PS REPORT 
-# Adds the output of "ps auxww" to a file named ps.log (default: yes)
+# Adds the output of "ps fauxww" to a file named ps.log (default: yes)
 USEPS=yes
 
 # RESOURCES REPORT
